apps/base/oauth/traefik/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: oauth
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v3.7.14
        args:
        - --configFile=/etc/traefik/traefik.yaml
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: traefik-config
          mountPath: /etc/traefik/traefik.yaml
          subPath: traefik.yaml
        - name: traefik-config
          mountPath: /etc/traefik/dynamic/dynamic.yaml
          subPath: dynamic.yaml
      volumes:
      - name: traefik-config
        configMap:
          name: traefik-config
