apps/base/oauth/traefik/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-http-route
  namespace: oauth
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateway
  hostnames:
  - "pihole.lan.${DOMAIN}"
  - "mqtt.lan.${DOMAIN}"
  - "netbootxyz.lan.${DOMAIN}"
  - "longhorn.lan.${DOMAIN}"
  - "radarr.lan.${DOMAIN}"
  - "sonarr.lan.${DOMAIN}"
  - "prowlarr.lan.${DOMAIN}"
  - "seerr.lan.${DOMAIN}"
  - "transmission.lan.${DOMAIN}"
  - "tautulli.lan.${DOMAIN}"
  - "hubble.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: traefik
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-tls-route
  namespace: oauth
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "pihole.lan.${DOMAIN}"
  - "mqtt.lan.${DOMAIN}"
  - "netbootxyz.lan.${DOMAIN}"
  - "longhorn.lan.${DOMAIN}"
  - "radarr.lan.${DOMAIN}"
  - "sonarr.lan.${DOMAIN}"
  - "prowlarr.lan.${DOMAIN}"
  - "seerr.lan.${DOMAIN}"
  - "transmission.lan.${DOMAIN}"
  - "tautulli.lan.${DOMAIN}"
  - "hubble.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: traefik
      port: 80
